--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@nextui-org/react": "^1.0.2-beta.4",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "react-spinners": "^0.11.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
