--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@nextui-org/react": "^1.0.2-beta.4",
+    "animate.css": "^4.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
